RFC: Removes key generation

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -4,5 +4,6 @@
 deploy_user: deploy
 deploy_groups: ["docker"]
 
-# Local dir to place ssh_keys
-deploy_local_ssh_key_dir: ssh_keys
+# Public key to include in authorized_key
+deploy_local_public_key:
+
