--- a/tests/playbook.yml
+++ b/tests/playbook.yml
@@ -2,6 +2,6 @@
 
 - hosts: all
   vars:
-    - deploy_local_ssh_key_dir: ssh_keys
+    - deploy_local_public_key: id_deploy.pub
   roles:
     - { role: role_to_test }
