--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -7,3 +7,5 @@ deploy_groups: ["docker"]
 # Public key to include in authorized_key
 deploy_local_public_key:
 
+# Hashedp password for deploy user
+deploy_hashed_password:
